# vk_graphics_basic

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  clone_dependencies.bat  clone_deps_and_build.bat  get_cpm.cmake  thirdparty.cmake
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
resources/scenes/Avocado/: Avocado.gltf
resources/scenes/lovely_town/: license.txt  scene.gltf
resources/scenes/low_poly_dark_town/: license.txt  scene.gltf
resources/shaders/: bbox.frag  bbox.frag.spv  bbox.vert  bbox.vert.spv  bbox_inst.vert  bbox_inst.vert.spv  common.h  compile_shaders.py  compile_shadowmap_shaders.py  compile_simple_compute_shaders.py  compile_simple_render_shaders.py  compile_simple_texture_shaders.py  hairs.geom  hairs.geom.spv  my_quad.frag  my_quad.frag.spv  quad.frag.spv  quad.vert.spv  quad3_vert.vert  quad3_vert.vert.spv  quad_frag.spv  quad_vert.spv  simple.comp  simple.comp.spv  simple.frag  simple.frag.spv  simple.vert  simple.vert.spv  simple_shadow.frag  simple_shadow.frag.spv  simple_tex.frag  simple_tex.frag.spv  unpack_attributes.h
src/: CMakeLists.txt  Camera.h  glfw_window.cpp  glfw_window.h  main.cpp
src/gui/: CMakeLists.txt  ImGuiConfig.hpp  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiRenderer.hpp
src/loader_utils/: hydraxml.cpp  hydraxml.h  images.cpp  images.h  pugixml.cpp
src/render/: ImGuiRender.cpp  ImGuiRender.h  bbox_renderer.cpp  bbox_renderer.h  compute_common.h  create_render.cpp  my_imgui_config.h  quad2d_render.cpp  quad2d_render.h  quad_renderer.cpp  quad_renderer.h  render_common.h  render_gui.h  render_imgui.cpp  scene_mgr.cpp  scene_mgr.h  shadowmap_render.cpp  shadowmap_render.h  simple_render.cpp  simple_render.h  simple_render_tex.cpp  simple_render_tex.h
src/render_utils/: CMakeLists.txt  QuadRenderer.cpp  QuadRenderer.hpp
src/samples/quad2d/: CMakeLists.txt  draw.cpp  main.cpp  present.cpp  quad2d_render.cpp  quad2d_render.h  render_init.cpp  update.cpp
src/samples/shadowmap/: App.cpp  App.hpp  CMakeLists.txt  Renderer.cpp  Renderer.h  draw.cpp  gui.cpp  main.cpp  present.cpp  render_init.cpp  shadowmap_render.cpp  shadowmap_render.h  update.cpp
src/samples/simple_compute/: CMakeLists.txt  compute_init.cpp  execute.cpp  main.cpp  simple_compute.cpp  simple_compute.h
src/samples/simpleforward/: CMakeLists.txt  create_render.cpp  create_render.h  main.cpp  simple_render.cpp  simple_render.h  simple_render_tex.cpp  simple_render_tex.h
src/scene/: CMakeLists.txt  Camera.h  SceneManager.cpp  SceneManager.hpp
src/utils/: Camera.h  glfw_window.cpp  glfw_window.h
src/wsi/: ButtonState.hpp  CMakeLists.txt  KeyToGlfw.hpp  Keyboard.hpp  KeyboardKey.hpp  Mouse.hpp  MouseButton.hpp  MouseButtonToGlfw.hpp  OsWindow.cpp  OsWindow.hpp  OsWindowingManager.cpp  OsWindowingManager.hpp
